--- a/cms/package.json
+++ b/cms/package.json
@@ -22,6 +22,8 @@
     "bootstrap": "^3.4.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "mongoose": "^7.3.4",
+    "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
     "ng2-dnd": "^5.0.2",
     "rxjs": "~7.8.0",
